samples/_failures_safe/1761275358_6d0eeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bdb742e.c: In function ‘main’:
./samples/SAFE/__tmp_6bdb742e.c:135:5: error: expected expression at end of input
  135 |     read_matrix(&mat1,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_6bdb742e.c:135:5: error: expected declaration or statement at end of input
